# godman-lab

./: .coverage  .env.example  .gitignore  A.I  API_ROUTING_UPDATE.md  APP_JS_REFACTOR.md  ATT_INTEGRATION.md  ATT_INTEGRATION_SUMMARY.md  AUDIT_SUMMARY.md  BANK_STATEMENT_INGEST_README.md  BOARD_EXPORT_INGEST.md  CHANGELOG.md  CLI_TOOLS_README.md  CLI_TRELLO_EXPORT_README.md  COMPLETION_SUMMARY.md  Dockerfile  FEATURE_SUMMARY.md  FUN_TOOLS_GUIDE.md  GPT_KODEX_REFACTOR_PROMPT.md  HANDLER_API_README.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LOGIN_TEST_REPORT.md  MAC_QOS_PRIORITY_GUIDE.md  MANIFEST_PER_YEAR_README.md  PHASE_2_CHANGELOG.md  PHASE_3_CHANGELOG.md  PHASE_4_CHANGELOG.md  PHASE_5_CHANGELOG.md  PHASE_FINAL_RELEASE.md  PRESETS_README.md  QUICKSTART.md  QUICK_START.md  README.md  RECEIPTS_MODULE_SUMMARY.md  RECEIPT_INGEST_README.md  RELEASE_NOTES_v0.1.0-att.md  SCANNER_SETUP.md  SERVER_STATUS.md  SESSION_MANAGEMENT_UPDATE.md  (+60 more)
.codex/: tools.json
.github/: copilot-instructions.md
apps-script/: README.md
cli/: pyproject.toml
cli/godman/: AI_ROUTER_CLI.md  __init__.py  agents.py  ai.py  att.py  capabilities.py  drive.py  gemini.py  health.py  main.py  measurements.py  memory.py  models.py  passwords.py  receipts.py  sync.py  tax.py  tools.py  trello.py  trello_analyze.py  workflows.py
cli/godman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/godman/commands/: __init__.py  automation.py  organize.py  profile.py  receipts.py  scan.py  shield.py  trello.py
config/: trello_list_map.example.yml
configs/: models.yaml
docs/: API_REFERENCE.md  API_SECURITY.md  DOCUMENT_ENHANCEMENTS.md  ENHANCED_OCR_USAGE.md  INSTALLATION.md  MIGRATION_NOTES.md  README_github_search.md  README_receipts.md  RECEIPT_SETUP_COMPLETE.md  RECOMMENDED_TOOLS.md  RELEASE_NOTES_v1.0.0.md  SUMMARY.md  agent_policies.md  agents_overview.md  architecture.md  capabilities_overview.md  capability_graph.md  critic_tools.md  distributed_engine.md  drive_automation_overview.md  errors.md  index.md  knowledge_graph.md  measurements_overview.md  memory_overview.md  memphis_pool_ingest.md  model_interface.md  model_routing_policies.md  models.md  models_overview.md  operations.md  overview.md  plugin_architecture.md  receipts_overview.md  skills.md  skills_overview.md  tools_overview.md  trello_audit.md  trello_automation_overview.md  workers.md  (+3 more)
examples/: tax_validator_usage.py
exports/: 2025_ACCURATE_JOB_COUNT.json  2025_FINAL_YEAR_SUMMARY.md  2025_YEAR_SUMMARY.json  ACCURATE_BILLING_STATUS.md  BILLING_ACTION_PLAN.md  CORRECTED_BILLING_ANALYSIS_2024_2025.json  PRICE_LIST_TEMPLATE.txt  UNBILLED_JOBS.csv  memphis_pool_billing_analysis.json  memphis_pool_board.json  memphis_pool_final_price_list.csv  memphis_pool_price_list.csv  memphis_pool_pricing_analysis.csv  memphis_pool_work_orders.json
f250/: FIXES_APPLIED.md  IMPLEMENTATION.md  README.md  test_integration.sh  test_workflow.sh
godman-ai/: engine.py
godman_ai/: README.md  __init__.py  demo.py  engine.py  local_model.py  orchestrator.py  version.py
godman_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
godman_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
launchd/: com.godmanlab.processreceipts.plist
libs/: ATT_BILLING_API_STATUS.md  TAX_CATEGORY_RULES_README.md  TRELLO_CLIENT_README.md  __init__.py  ai_organizer.py  att_billing_api.py  att_scraper.py  cache.py  credentials.py  example_usage.py  expenses.py  gemini_promptlab.py  icloud_sync.py  memphis_pool_bills.py  memphis_pool_ingest.py  ocr.py  password_ingest.py  receipts.py  sandbox.py  tax_category_rules.py  tax_receipts_processor.py  test_trello.py  tool_runner.py  trello_analyze.py  trello_client.py  trello_metrics.py  trello_normalizer.py  trello_sync.py
ocr/: enhanced_extractor.py  llm_extractor.py
orchestrators/: orchestrate_receipts.py
organized_documents/: document_analysis.csv
projects/: notes.md
prototype/: __init__.py
receipts/: README.md  __init__.py  example_usage.py  process_receipts.py  test_process_receipts.py
review/: streamlit_review.py
scripts/: audit_snapshot.py  test_trello_client.py
tests/: __init__.py  conftest.py  test_agent_loop.py  test_api.py  test_appstore.py  test_async_tool_runner.py  test_cache.py  test_config.py  test_daemon.py  test_file_security.py  test_import_boundaries.py  test_imports.py  test_local_router_async.py  test_log_security.py  test_memory.py  test_model_interface.py  test_model_router.py  test_orchestrator_routing.py  test_os_state.py  (+18 more)
(+435 files in other folders)
