[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godman-ai"
version = "1.0.0"
description = "Godman-Lab orchestration, workflows, skills, and plugins."
authors = [{ name = "Godman Lab", email = "dev@godman.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1",
  "build>=1.0.0",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pandas>=2.0",
]
docs = ["pyyaml>=6.0"]
plugins = []

[tool.setuptools.packages.find]
include = ["godman_ai*"]
exclude = ["tests*","examples*",".github*"]

[tool.ruff]
line-length = 100
